style.css
a {
    text-decoration: none;
}
nav {
    background-color: rgb(22, 22, 22);
    min-height: 5rem;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-between;
}
nav a {
    padding: 1rem;
    color: whitesmoke;
}
.logo {
    font-family: 'eczar-bold', sans-serif;
}
.nav {
    font-family: 'Archivo', sans-serif;
}
.nav a:hover {
    background-color: rgb(83, 83, 83);
}
.sök {
    background-color: gray;
    padding-left: 1rem;
    padding-right: 1rem;
    padding-top: 0.5rem;
    padding-bottom: 0.5rem;
    border-radius: 20px;
    color: whitesmoke;
    font-family: 'Archivo', sans-serif;
}
.sökfält {
    margin-right: 1rem;
}
body {
    background-color: rgb(230, 230, 230);
    margin-top: 0%;
    margin-left: 0%;
    margin-right: 0%;
    margin-bottom: 0%;
}
.huvudbild1 {
    background-image: url("pexels-andrea-piacquadio-920382.jpg");
    background-size: cover;
    min-height: 36rem;
}
.bild1 {
    color: #fff;
    padding: 1rem;
    font-size: 3rem;
}
.köpte1 {
    display: inline-block;
    min-width: 28px;
    padding-left: 16px;
    padding-right: 16px;
    padding-top: 8px;
    padding-bottom: 8px;
    border-radius: 980px;
    background: #ffffff;
    margin-left: 1rem;
}
.köpte1 a {
    color: rgb(0, 0, 0);
}
main {
    font-family: 'Archivo', sans-serif;
}
.kort1 {
    max-width: 12rem;
    border: solid 1px black;
    height: fit-content;
    margin: 1rem;
}
.kort1 img {
    max-width: 100%;
    margin-bottom: 0.5rem;
}
.kort1 p {
    display: flex;
    justify-content: center;
}
.titel1 {
    border-top: 1px solid black;
    display: flex;
    justify-content: center;
}
.kort1text {
    display: flex;
    justify-content: center;
    padding-bottom: 1rem;
}
.tillbehör1 {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    border-bottom: 1px solid black;
    padding-bottom: 2rem;
}
footer {
    background-color: rgb(196, 196, 196);
    padding: 1rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}
footer div { 
    max-width: 12rem;
}
footer h4 {
    display: flex;
    justify-content: center;
}
.titel2 {
    display: flex;
    justify-content: center;
    border-bottom: black 1px solid;
}
.kort2 {
    width: 20rem;
    height: fit-content;
    margin: 1rem;
    margin-bottom: 2rem;
    border-radius: 20px;
    background-color: #fff;
    padding-bottom: 1rem;
}
.kort2 img {
    max-width: 100%;
}
.kort2 p {
    display: flex;
    justify-content: center;
}
.kort2text {
    display: flex;
    justify-content: center;
}
.phonemain {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    border-bottom: 1px solid black;
    padding-bottom: 2rem;
}
.köpte2 {
    display: inline-block;
    min-width: 28px;
    padding-left: 16px;
    padding-right: 16px;
    padding-top: 8px;
    padding-bottom: 8px;
    border-radius: 980px;
    background: green;
    margin-top: 1rem;
}
.köpte2 a {
    color: #ffffff;
}
.käsperphone2 {
    flex-grow: 1;
    background-color: rgb(230, 230, 230);
    padding: 2rem;
}
.maincontainer {
    display: flex;
    flex-wrap: wrap;
}
aside {
    max-width: 30rem;
    padding: 2rem;
    background-color: rgb(230, 230, 230);
}
aside img {
    max-width: 100%;
    border-radius: 20px;
}
.inställningarna {
    background-color: #fff;
    padding: 1rem;
    border: 0.5px solid black;
    border-radius: 20px;
    width: 7rem;
}
.valen :hover {
    background-color: lightgrey;
}
.valen {
    margin-top: 5rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}
.färgval1 {
    color: #fff;
    padding: 1rem;
    border: 0.5px solid black;
    border-radius: 20px;
    width: 5rem;
    background-color: black;
    margin-bottom: 3rem;
}
.färgval2 {
    color: #fff;
    padding: 1rem;
    border: 0.5px solid black;
    border-radius: 20px;
    width: 5rem;
    background-color: green;
    margin-bottom: 3rem;
}
.färgval3 {
    color: black;
    padding: 1rem;
    border: 0.5px solid black;
    border-radius: 20px;
    width: 5rem;
    background-color: gray;
    margin-bottom: 3rem;
}
.färgval4 {
    color: #fff;
    padding: 1rem;
    border: 0.5px solid black;
    border-radius: 20px;
    width: 5rem;
    background-color: blue;
    margin-bottom: 3rem;
}
.kostnad {
    background-color: #fff;
    border-radius: 20px;    
    height: fit-content;
    border: 1px black solid;
}
.kostnadexempel {
    display: flex;
    justify-content: center;
    padding: 1rem;
}
.omossmain {
    background-color: #fff;
    background-image: url(pexels-mart-production-7709110.jpg);
    min-height: 36rem;
    background-size: cover;
    width: 100%;
}
.bild2 {
    color: rgb(0, 0, 0);
    padding: 1rem;
    font-size: 3rem;
    display: flex;
    justify-content: center;
}
.supportsida {
    display: flex;
    justify-content: space-evenly;
    border-bottom: black 1px solid;
}
.omosssupport {
    padding: 3rem;
}

